<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lineOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineOne"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lineTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineTwo"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Button
            android:id="@+id/rockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rock"
            android:textColorHighlight="#830505"
            android:textSize="34sp" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paper"
            android:textSize="34sp" />

        <Button
            android:id="@+id/scissorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scissors"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/gameScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/gameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="34sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>